better handling of whitespace (display correctly, limit to 2 consecutive newlines)

--- a/index.css
+++ b/index.css
@@ -46,4 +46,7 @@ body {
 
     /* wrap posts which do not contain any spaces or newlines */
     word-wrap: break-word;
+
+    /* Display newlines as newlines without replacing \n by <br> */
+    white-space: pre-line;
 }
